--- a/html/_/index.html
+++ b/html/_/index.html
@@ -548,7 +548,7 @@ crossorigin=""/>
   <p class="commentaires"><span><b>Commentaires <sup class="fas fa-question-circle iconetab" title="L'IFRA (International Fragrance Association) fourni un certain nombre de recommandations ou de spécifications justifiants les restrictions des ingrédients. Les mentions suivantes sont valables pour une utilisation à forte dose de la matière première, ou en cas de sensibilité particulièrement élevée à cette matière première. Son utilisation en parfumerie étant restreinte, ces risques sont évités dans le cas des parfums."></sup> :</b><span id="modalbody-commentifra" class="textitem"></span></span></p>
 </div>
 <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
-  <span><img class="logoifra" src = "img/ifra.png" alt=""/></span>
+  <span><img class="logoifra" src = "../img/ifra.png" alt=""/></span>
 </div>
 </div>
 
@@ -773,7 +773,7 @@ crossorigin=""/>
   <p class="commentaires"><span><b>Commentaires <sup class="fas fa-question-circle iconetab" title="L'IFRA (International Fragrance Association) fourni un certain nombre de recommandations ou de spécifications justifiants les restrictions des ingrédients. Les mentions suivantes sont valables pour une utilisation à forte dose de la matière première, ou en cas de sensibilité particulièrement élevée à cette matière première. Son utilisation en parfumerie étant restreinte, ces risques sont évités dans le cas des parfums."></sup> :</b><span id="modalbody-commentifras" class="textitem"></span></span></p>
 </div>
 <div class="col-lg-2">
-  <span><img class="logoifra" src = "img/ifra.png" alt="" /></span>
+  <span><img class="logoifra" src = "../img/ifra.png" alt="" /></span>
 </div>
 </div>
 <div class="col-lg-12 blocktable">
