fresh CSS for the popups

--- a/html/_/index.html
+++ b/html/_/index.html
@@ -452,7 +452,7 @@ crossorigin=""/>
 <div class="row ">
   
 <div class="col-xs-8 col-sm-8 col-md-8 col-lg-8">
-<div id="modaltitle" class="modal-title modal-title1 text-center col-11"></div>
+<div id="modaltitle" class="modal-title"></div>
 </div>
 
 <div class="row">
