--- a/html/_/index.html
+++ b/html/_/index.html
@@ -474,12 +474,12 @@ crossorigin=""/>
 <div class="modal-body">           
   <!-- définissions des onglets -->
 <div class="panel-heading">
-  <ul id="ongletsnat" class="nav nav-pills nav-justified">
-    <li class="active"><a href="#tab1info" data-toggle="tab" class="onglets">Présentation Générale</a></li>
-    <li><a href="#tab2info" data-toggle="tab" class="onglets">Botanique Origine Extraction</a></li>
-    <li><a href="#tab3info" data-toggle="tab" class="onglets">Réglementation</a></li>
-    <li><a href="#tab4info" data-toggle="tab" class="onglets">Autres Remarques</a></li>
-    <li><a href="#tab6info" data-toggle="tab" class="onglets">Fournisseurs</a></li>
+  <ul id="ongletsnat" class="nav nav-pills nav-justified" role="tablist">
+    <li class="nav-item"><a href="#tab1info" data-toggle="pill" aria-controls="tab1info" aria-selected="true" class="onglets nav-link active" id="pills-tab1">Présentation Générale</a></li>
+    <li class="nav-item"><a href="#tab2info" data-toggle="pill" aria-controls="tab2info" aria-selected="false" class="onglets nav-link" id="pills-tab2">Botanique Origine Extraction</a></li>
+    <li class="nav-item"><a href="#tab3info" data-toggle="pill" aria-controls="tab3info" aria-selected="false" class="onglets nav-link" id="pills-tab3">Réglementation</a></li>
+    <li class="nav-item"><a href="#tab4info" data-toggle="pill" aria-controls="tab4info" aria-selected="false" class="onglets nav-link" id="pills-tab4">Autres Remarques</a></li>
+    <li class="nav-item"><a href="#tab6info" data-toggle="pill" aria-controls="tab6info" aria-selected="false" class="onglets nav-link" id="pills-tab6">Fournisseurs</a></li>
   </ul>
 </div>
 <!--contenu des onglets-->
@@ -487,7 +487,9 @@ crossorigin=""/>
 <div class="tab-content">
   
   <!--Onglet présentation générale-->
-<div class="tab-pane fade in active row" id="tab1info">
+<div class="tab-pane fade show active" id="tab1info" role="tabpanel" aria-labelledby="pills-tab1">
+<div class="container-fluid">
+<div class="row">
 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 panelcontent" >
 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
   
@@ -512,9 +514,13 @@ crossorigin=""/>
 </div>
 </div>
 </div>
+</div>
+</div>
 
 <!--Onglet Botanique-->
-<div class="tab-pane fade row" id="tab2info">
+<div class="tab-pane fade" id="tab2info"  role="tabpanel" aria-labelledby="pills-tab2">
+<div class="container-fluid">
+<div class="row">
 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 panelcontent">
 <div class="col-lg-12">
   
@@ -534,11 +540,15 @@ crossorigin=""/>
 </div>
 </div>
 </div>
+</div>
+</div>
 
 <!--Onglet Reglementation-->
-<div class="tab-pane fade row" id="tab3info">
+<div class="tab-pane fade" id="tab3info"   role="tabpanel" aria-labelledby="pills-tab3">
+<div class="container-fluid"> 
+<div class="row">
 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 panelcontent">
-  
+
   <p class="item"><span><b>IFRA <sup class="fas fa-question-circle iconetab" title="L'IFRA (International Fragrance Association) recommande des utilisations maximales pour certaines matières premières dans leur produit fini. L'avis donné par cette association possède une grande valeur dans le milieu du parfum. Respecter les normes IFRA est gage de qualité et de sécurité à l'emploi du parfum."></sup> :</b><span id="modalbody-ifra" class="textitem"></span></span></p>
   
 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 blockifra1">
@@ -634,9 +644,12 @@ crossorigin=""/>
 
 </div>		
 </div>	 
+</div>
+</div>
 
 <!-- Onglet Commentaires-->
-<div class="tab-pane fade row" id="tab4info">
+<div class="tab-pane fade" id="tab4info"  role="tabpanel" aria-labelledby="pills-tab4">
+<div class="container-fluid">
 <div class="row">
 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 panelcontent">
   <p class="item"><span><b>Utilisation <sup class="fas fa-question-circle iconetab" title="Types de parfums et d'accords auxquels la matière première peux être associée."></sup> :</b><span id="modalbody-utilisation" class="textitem"></span></span></p>
@@ -645,12 +658,15 @@ crossorigin=""/>
 </div>
 </div> 
 </div>
+</div>
 
 <!-- Onglet Fournisseurs -->
-<div class="tab-pane fade row" id="tab6info">
+<div class="tab-pane fade" id="tab6info"  role="tabpanel" aria-labelledby="pills-tab6">
+<div class="container-fluid">
 <div class="row">
 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 panelcontent">
   <p class="textitem"><span class="fournisseurs">Vous <u>commercialisez</u> des matières premières présentes dans la classification ScenTree et vous souhaitez que nos utilisateurs le sachent ? <br>Merci de rentrer en contact avec l'adresse mail suivante : <a href="mailto:fournisseurs@scentree.co">fournisseurs@scentree.co</a></span></p>
+</div>
 </div>
 </div>
 </div>
@@ -660,10 +676,12 @@ crossorigin=""/>
 </div>  <!--fin body-->
 
 <div class="modal-footer">
+<div class="container-fluid">
 <div class="row"> 
 <div class="col-xs-12 text-center">
   <a href="/" class="btn btn-default" data-dismiss="modal">Fermer</a>
 </div> 
+</div>
 </div>
 </div> <!--fin footer-->
 
