--- a/html/_/index.html
+++ b/html/_/index.html
@@ -451,16 +451,14 @@ crossorigin=""/>
   
 <div class="row ">
   
-<div class="col-xs-8 col-sm-8 col-md-8 col-lg-8">
+<div class="col-8">
 <div id="modaltitle" class="modal-title"></div>
 </div>
 
-<div class="row">
-<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+<div class="col-3">
 <div id="modalheader-type" class="modalheader-type2"></div>
-<a href="/" class="close" data-dismiss="modal">&times;</a>
 </div>
-</div>
+<div class="col-1"><a href="/" class="close" data-dismiss="modal">&times;</a></div>
 
 </div>
 
@@ -678,7 +676,7 @@ crossorigin=""/>
 <div class="modal-footer">
 <div class="container-fluid">
 <div class="row"> 
-<div class="col-xs-12 text-center">
+<div class="col-12 text-center">
   <a href="/" class="btn btn-default" data-dismiss="modal">Fermer</a>
 </div> 
 </div>
