upgrading MODAL MENU ('découvrir Scentree')

--- a/html/_/index.html
+++ b/html/_/index.html
@@ -116,8 +116,12 @@ crossorigin=""/>
   
   <!--Block Haut avec le logo -->
 <div class="modal-header" >
-  <h4 class="modal-title modal-title1 text-center col-11">Découvrir ScenTree</h4>
-  <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+<div class="container-fluid">
+<div class="row">
+  <div class="text-center col-11"><h4 class="modal-title modal-title1">Découvrir ScenTree</h4></div>
+  <div class="col-1"><button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button></div>
+</div>
+</div>
 </div>
 
 <!--Block Bas avec les textes -->
