--- a/html/_/index.html
+++ b/html/_/index.html
@@ -49,6 +49,7 @@ crossorigin=""/>
 <div class="col-2 offset-5 offset-md-0 col-md-12">
   <!--Recherche -->
 <nav class="navbar navbar-expand-md navbar-light  menubouton">
+  <a class="navbar-brand" href="#"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSearch" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -63,6 +64,7 @@ crossorigin=""/>
 
 <div class="col-2 col-md-12">
 <nav class="navbar navbar-expand-md navbar-light  menubouton">
+  <a class="navbar-brand" href="#"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarMainMenu" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
