responsive menu, on the right way I guess

--- a/html/_/index.html
+++ b/html/_/index.html
@@ -48,39 +48,35 @@ crossorigin=""/>
 
 <div class="col-2 offset-5 offset-md-0 col-md-12">
   <!--Recherche -->
-<nav class="navbar navbar-expand-md navbar-light  menubouton">
-  <a class="navbar-brand" href="#"></a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSearch" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-<div class="collapse navbar-collapse  input-group" id="navbarSearch">
-  <form action="" autocomplete="off">
+  <button type="button" class="btn d-md-none">R</button>
+  <form class="" action="" autocomplete="off">
     <input id="searchinput" type="search" class="form-control" placeholder="Nom (botanique) ou N°CAS..." />
   </form>
 </div>
-</nav>
-</div>
 
 <div class="col-2 col-md-12">
-<nav class="navbar navbar-expand-md navbar-light  menubouton">
-  <a class="navbar-brand" href="#"></a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarMainMenu" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  
-  <div class="collapse navbar-collapse" id="navbarMainMenu">
-    <ul class="navbar-nav flex-column boutonclickable bouton boutons">
-      <li class="nav-item"><a class="nav-link" id="news_button">Découvrez les nouveautés !</a></li>
-      <li class="nav-item"><a class="nav-link" id="credit_button">Les collaborateurs de ScenTree</a></li>
-      <li class="nav-item"><a class="nav-link" id="source_button">Sources</a></li>
-      <li class="nav-item"><a class="nav-link" id="contact_button">Contacts</a></li>
-      <li class="nav-item"><a class="nav-link" id="confidentialite_button">Mentions Légales</a></li>
-      <li class="nav-item"><a class="nav-link" id="linkedIn_button">IN</a></li>
-      <li class="nav-item"><a class="nav-link" id="instagram_button">IG</a></li>
-    </ul>
-  </div>
-</nav>
+<button type="button" class="btn d-md-none">M</button>
+<div class="container-fluid  text-center  boutonclickable bouton boutons  ">
+<div class="row">
+
+<div class="col-12"><a id="news_button"><span class="d-none d-sm-none d-md-inline">Découvrez les nouveautés !</span><span class="d-md-none">Les nouveautés</span></a></div>
+<div class="col-12"><a id="credit_button"><span class="d-none d-sm-none d-md-inline">Les collaborateurs de ScenTree</span><span class="d-md-none">Les collaborateurs</span></a></div>
+<div class="col-12 col-md-6"><a id="source_button">Sources</a></div>
+<div class="col-12 col-md-6"><a id="contact_button">Contacts</a></div>
+<div class="col-12 col-md-6 p-0"><a id="confidentialite_button">Mentions Légales</a></div>
+
+<div class="col-12 col-md-6">
+<div class="container-fluid">
+<div class="row">
+<div class="offset-2 col-4 p-0"><a id="linkedIn_button">IN</a></div>
+<div class="col-4 p-0"><a id="instagram_button">IG</a></div>
+</div>
+</div>
+</div>
+
+
+</div>
+</div>
 </div>
 
 <div id="copyright" class="col-md-12   d-none d-sm-none d-md-block"><sup>©</sup> Copyright 2019 |  ScenTree  | All Rights Reserved |</div>
