the right ids to show the modals

--- a/html/_/index.html
+++ b/html/_/index.html
@@ -196,7 +196,7 @@ crossorigin=""/>
 
 <!--MODAL CONTACT -->
       
-<div class="modal" tabindex="-1" role="dialog" id="Contacts">
+<div class="modal" tabindex="-1" role="dialog" id="lesContacts">
 <div class="modal-dialog" role="document">
 <div class="modal-content">
   
@@ -230,7 +230,7 @@ crossorigin=""/>
 
 <!--MODAL SOURCE-->	
 
-<div class="modal" tabindex="-1" role="dialog" id="Source">
+<div class="modal" tabindex="-1" role="dialog" id="lesSources">
 <div class="modal-dialog modal-lg" role="document">
 <div class="modal-content">
   
@@ -959,8 +959,9 @@ crossorigin=""/>
 </div> <!-- fin synthetique -->
 
 
+<!-- MODAL MENTIONS LÉGALES -->
 
-<div class="modal" tabindex="-1" role="dialog" id="Confidentialite">
+<div class="modal" tabindex="-1" role="dialog" id="lesMentionsLegales">
 <div class="modal-dialog modal-lg" role="document">
 <div class="modal-content">
 
