the right title part for the modals

--- a/html/_/index.html
+++ b/html/_/index.html
@@ -201,8 +201,12 @@ crossorigin=""/>
 <div class="modal-content">
   
 <div class="modal-header">
-  <h4 class="modal-title modal-title1 text-center col-11">Contact</h4>
-  <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+<div class="container-fluid">
+<div class="row">
+  <div class="text-center col-11"><h4 class="modal-title modal-title1">Contact</h4></div>
+  <div class="col-1"><button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button></div>
+</div>
+</div>
 </div>
 
 <div class="modal-body">
@@ -235,8 +239,12 @@ crossorigin=""/>
 <div class="modal-content">
   
 <div class="modal-header">
-  <h4 class="modal-title modal-title1 text-center col-11">Sources</h4>
-  <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+<div class="container-fluid">
+<div class="row">
+  <div class="text-center col-11"><h4 class="modal-title modal-title1">Sources</h4></div>
+  <div class="col-1"><button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button></div>
+</div>
+</div>
 </div>
 
 <div class="modal-body">
@@ -298,14 +306,18 @@ crossorigin=""/>
 </div>
 
 
-<!--MODAL CREDITS -->  
+<!--MODAL COLLABORATEURS ex-CREDITS -->  
 <div class="modal" tabindex="-1" role="dialog" id="lesCollaborateurs">
 <div class="modal-dialog" role="document">
 <div class="modal-content">
   
 <div class="modal-header">
-  <h4 class="modal-title modal-title1 text-center col-11">Crédits</h4>
-  <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+<div class="container-fluid">
+<div class="row">
+  <div class="text-center col-11"><h4 class="modal-title modal-title1">Les collaborateurs</h4></div>
+  <div class="col-1"><button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button></div>
+</div>
+</div>
 </div>
 
 <div class="modal-body">
@@ -354,8 +366,12 @@ crossorigin=""/>
 <div class="modal-content">
   
 <div class="modal-header">
-  <h4 class="modal-title modal-title1 text-center col-11">Les ingrédients du ScenTree</h4>
-  <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+<div class="container-fluid">
+<div class="row">
+  <div class="text-center col-11"><h4 class="modal-title modal-title1">Les ingrédients du ScenTree</h4></div>
+  <div class="col-1"><button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button></div>
+</div>
+</div>
 </div>
 
 <div class="modal-body">
@@ -384,8 +400,12 @@ crossorigin=""/>
 <div class="modal-content">
   
 <div class="modal-header">
-  <h4 class="modal-title modal-title1 text-center col-11">Les familles et descripteurs olfactifs du ScenTree</h4>
-  <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+<div class="container-fluid">
+<div class="row">
+  <div class="text-center col-11"><h4 class="modal-title modal-title1">Les familles et descripteurs olfactifs du ScenTree</h4></div>
+  <div class="col-1"><button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button></div>
+</div>
+</div>
 </div>
 
 <div class="modal-body">
@@ -439,9 +459,13 @@ crossorigin=""/>
 <div class="container-fluid">
 <div class="row">
   
-<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12"> 
-<div id="modaltitle2" class="modal-title modal-title1 text-center col-11"></div>
-<a href="/" class="close" data-dismiss="modal">&times;</a>
+<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+<div class="container-fluid">
+<div class="row">
+	<div class="text-center col-11"><span id="modaltitle2" class="modal-title modal-title1"></span></div>
+<div class="col-1"><a href="/" class="close" data-dismiss="modal">&times;</a></div>
+</div>
+</div>
 </div>
 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12"> 
 <div id="modalheader-type2" class="modalheader-type"></div>
@@ -966,8 +990,12 @@ crossorigin=""/>
 <div class="modal-content">
 
 <div class="modal-header">
-  <h4 class="modal-title modal-title1 text-center col-11">Mentions Légales</h4>
-  <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+<div class="container-fluid">
+<div class="row">
+  <div class="text-center col-11"><h4 class="modal-title modal-title1">Mentions Légales</h4></div>
+  <div class="col-1"><button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button></div>
+</div>
+</div>
 </div>
 
 <div class="modal-body">
