modal menu : better looking (the same look as the current production use)

--- a/html/_/index.html
+++ b/html/_/index.html
@@ -144,22 +144,18 @@ crossorigin=""/>
 
 <!--MODAL MENU -->
 
-<div class="modal fade modalmenu" id="decouvrirScenTree" tabindex="-1" role="dialog">
+<div class="modal fade in  my-modal" id="decouvrirScenTree" tabindex="-1" role="dialog">
 <div class="modal-dialog modal-lg" role="document">
 <div class="modal-content">
   
   <!--Block Haut avec le logo -->
-<div class="modal-header" >
-<div class="container-fluid">
-<div class="row">
-  <div class="text-center col-11"><h4 class="modal-title modal-title1">Découvrir ScenTree</h4></div>
-  <div class="col-1"><button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button></div>
-</div>
-</div>
+<div class="modal-header d-block">
+  <button type="button" class="close float-right" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+  <h4 class="text-center  modal-title modal-title1"><img class="img-fluid  max-height-70px" src="../img/logob.png" alt="Découvrir ScenTree" /></h4>
 </div>
 
 <!--Block Bas avec les textes -->
-<div class="modal-body">
+<div class="modal-body text-justify my-modal-body">
   
 <div class="papernote">
   <p><i class='fa fa-question-circle fa-fw fa-lg icone'></i>&nbsp;<b><i>ScenTree</i></b> est un projet initié en 2017 par <a href="https://www.linkedin.com/in/maxime-baud-915a79130/" target ="_BLANK">Maxime BAUD </a> et <a href= "https://www.linkedin.com/in/thomas-espinasse-1aa576103/" target ="_BLANK"> Thomas ESPINASSE </a>, deux étudiants de l’ISIPCA. Il s’agit d’une <b>classification collaborative des matières premières de parfumerie, en fonction de leur famille et de leurs descripteurs olfactifs</b>. Pour chaque matière première, une famille et quatre descripteurs principaux sont possibles. Cela amène à présenter leur classification sous la forme d’un <b>arbre</b> à plusieurs niveaux de zoom, dont chaque nœud représente une famille ou un descripteur. Le terme «<b>collaboratif</b>» signifie que cette classification découle de la contribution de professionnels de la parfumerie : parfumeurs, évaluateurs, experts en matières premières etc. Tous nous ont aidé à classifier certaines matières premières de l’arbre.
